# Tender_Qualification_Assistant.

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  decision-ledger.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 01-ingest.yml  02-extract.yml  03-qualify.yml  04-recommend.yml  05-ledger.yml  lint.yml  tests.yml
benchmarks/: README.md  dashboard.md
benchmarks/suite-RA1/: manifest.md
data/outcomes/: tender-001_recommendation.json  tender001_recommendation.json  (+9 more)
docs/: DV-1-Plan.md  Evidence-Index.md  OFE-candidate.md  RA-2-Plan.md  RA-2.5-Plan.md  Repository-Charter.md  architecture.md  customer-persona.md  decision-taxonomy.md  mvp-scope.md  post-ra1-parallel-extraction.md  product-principles.md  recommendation-engine.md  roadmap.md  scoring-model.md  vision.md  workflow.md
examples/: README.md
notebooks/: parser-experiments.ipynb  recommendation-analysis.ipynb  scoring-analysis.ipynb
patterns/: PAT-001-capability-fit.md  PAT-001-domain-fit.md  PAT-002-insufficient-evidence-default.md  PAT-003-clause-cross-contamination.md  PAT-004-identifier-extraction-miss.md  PAT-005-structural-eligibility-condition.md
prompts/: parser.md  qualification.md  recommendation.md  requirement-extractor.md  validation.md
schemas/: company.schema.json  evidence.schema.json  outcome.schema.json  recommendation.schema.json  requirement.schema.json  tender.schema.json
scripts/: export_reports.py  ingest_tenders.py  parse_all.py  run_pipeline.py  score_all.py
tests/: conftest.py
validation/: 000-baseline.md  SAMPLING-STRATEGY.md
(+78 files in other folders)
